[package]
name = "desed"
description = "Sed script debugger. Debug and demystify your sed scripts with TUI debugger."
repository = "https://github.com/SoptikHa2/desed"
homepage = "https://soptik.tech/"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["awk", "debugger", "debugging", "tui"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
version = "1.1.4"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"


[dependencies]
# Parsing CLI arguments
clap = "2.33.0"
# TUI
crossterm = "0.17.4"
tui = {  version = "0.9.4", default-features = false, features = ["crossterm"] }
# Flexible error handling
anyhow = "1.0.31"
