[package]
name = "desed"
description = "Sed script debugger. Debug and demystify your sed scripts with TUI debugger."
repository = "https://github.com/SoptikHa2/desed"
homepage = "https://soptik.tech/"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["awk", "debugger", "debugging", "tui"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
version = "1.2.1"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"


[dependencies]
# Parsing CLI arguments
clap = { version = "3.0.14", features = ["cargo"] }
# TUI
crossterm = "0.25.0"
tui = {  version = "0.9.1", default-features = false, features = ["crossterm"] }
# Flexible error handling
anyhow = "1.0.62"
# For easier handling of conditional compilation
cfg-if = "0.1.10"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.8.3" # Watch files and auto-reload on changes

[target.'cfg(any(target_os="darwin", target_os="dragonfly", target_os="freebsd", target_os="netbsd", target_os="openbsd"))'.dependencies]
kqueue = "1.0.1" # Watch files and auto-reload on changes
