[package]
name = "desed"
description = "Sed script debugger. Debug and demystify your sed scripts with TUI debugger."
repository = "https://github.com/SoptikHa2/desed"
homepage = "https://soptik.tech/"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["awk", "debugger", "debugging", "tui"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
version = "1.2.2"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"


[dependencies]
# Parsing CLI arguments
clap = { version = "4", features = ["cargo"] }
# TUI
ratatui = "0.28.1"
# Flexible error handling
anyhow = "1.0.65"
# For easier handling of conditional compilation
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10.0" # Watch files and auto-reload on changes

[target.'cfg(any(target_os="macos", target_os="dragonfly", target_os="freebsd", target_os="netbsd", target_os="openbsd"))'.dependencies]
kqueue = "1.0.6" # Watch files and auto-reload on changes
